--- a/package.json
+++ b/package.json
@@ -10,26 +10,31 @@
   },
   "dependencies": {
     "dayjs": "^1.11.13",
-    "expo": "~51.0.28",
-    "expo-constants": "~16.0.2",
-    "expo-crypto": "~13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^54.0.0",
+    "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
+    "expo-drizzle-studio-plugin": "^0.2.1",
+    "expo-linking": "~8.0.9",
+    "expo-router": "~6.0.15",
+    "expo-sqlite": "~16.0.9",
+    "expo-status-bar": "~3.0.8",
     "immer": "^10.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.26.0",
+    "@types/react": "~19.1.10",
+    "eslint": "^9.39.1",
+    "eslint-config-expo": "^10.0.0",
+    "prettier": "^3.7.3",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
